# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

install_headers(
    [
        'bucket_util.h',
        'checked_cast.h',
        'config.h',
        'content_file_util.h',
        'conversions.h',
        'data_file_set.h',
        'decimal.h',
        'endian.h',
        'error_collector.h',
        'formattable.h',
        'formatter.h',
        'int128.h',
        'lazy.h',
        'location_util.h',
        'macros.h',
        'partition_value_util.h',
        'property_util.h',
        'string_util.h',
        'temporal_util.h',
        'timepoint.h',
        'transform_util.h',
        'truncate_util.h',
        'type_util.h',
        'url_encoder.h',
        'uuid.h',
        'visitor_generate.h',
        'visit_type.h',
    ],
    subdir: 'iceberg/util',
)
